--- a/style.css
+++ b/style.css
@@ -62,9 +62,11 @@ body{
 span{
 	text-align: center;
 	vertical-align: center;
-	font-size: 100px;
+	font-size: 8vw;
 	font-weight: bold;
 	line-height: 120px;
+	max-width: 100%;
+	max-height: 100%;
 }
 .front-face{
 	transform: rotateY(180deg);
