--- a/style.css
+++ b/style.css
@@ -12,15 +12,15 @@ body{
 .memory-game{
 	display: flex;
 	flex-wrap: wrap;
-	height: 580px;
-	width: 1100px;
+	height: 560px;
+	width: 300px;
 	margin: auto;
 	perspective: 1000px;
 }
 .memory-card{
 	position: relative;
-	width: 12%;
-	height: 24.5%;
+	width: 23%;
+	height: 12%;
 	margin: 2px;
 	transform-style: preserve-3d;
 	transition: transform .5s; 
@@ -59,15 +59,21 @@ body{
     background: linear-gradient(top, #154b67 0%,#28938b 100%); /* W3C */
 	
 }
-span{
-	text-align: center;
-	vertical-align: center;
-	font-size: 8vw;
-	font-weight: bold;
-	line-height: 120px;
-	max-width: 100%;
-	max-height: 100%;
-}
 .front-face{
 	transform: rotateY(180deg);
+}
+img.back-face{
+	padding: 20%;
+}
+@media  (min-width: 768px) {
+	.memory-game {
+	height: 520px;
+	width: 960px;
+	}
+	.memory-card {
+	width: 12%;
+	height: 24%;
+	}
+}
+
 }
