--- a/style.css
+++ b/style.css
@@ -1,33 +1,66 @@
 /*font-family: 'UnifrakturMaguntia', cursive;
-font-family: 'Uncial Antiqua', cursive;*/
+font-family: 'Uncial Antiqua', cursive;
+font-family: 'Lilita One', cursive;
+font-family: 'Acme', sans-serif;*/
 
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+	outline:none;
 }
-body{
+.background {
 	height: 100vh;
-	background-image: url("img/ballroomMobile.jpg");
 	background-size: cover;
 	display: flex;
 }
-.game-info-container {
-	margin-top: 1em;
-	margin-left: 0.5em;
-	width: 70px;
+.background.ballroom {
+	background-image: url("img/ballroom/ballroomMobile.jpg");
 }
-.game-info {
+.background.farm {
+	background-image: url("img/farm/526.jpg");
+}
+.game-info-container {
+	margin-left: 0.5em;
+	width: 60px;
+	font-size: 1em;
+}
+#game-info {
+	padding: .6em;
+}
+.ballroomstyle{
 	font-family: 'Uncial Antiqua', cursive;
 	color: #DBCC18;
-	font-size: .8em;
 	background-color: rgba(21,75,104,0.6);
-	padding: .5em;
+}
+.farmstyle{
+	font-family: 'Acme', sans-serif;
+	color: #feda00;
+	background-color: rgba(5,177,217,0.5);
+	border-style: solid;
+	border-width: .1em;
+	border-color: white;
+	border-radius: 3px;
+}
+li{
+	list-style-type: none;
+}
+.changeTheme {
+	font-size:.6em;
+	padding-left: .8em;
+}
+.changeTheme:hover {
+	font-size: .7em;
+	font-weight: bold;
+}
+.changeTheme.selected {
+	font-size: .7em;
+	font-weight: bold;
 }
 .overlay-text{
 	display: none;
 	position: fixed;
-	top: 0;
+	top: 0;    
 	right: 0;
 	bottom: 0;
 	left: 0;
@@ -55,13 +88,30 @@ body{
 		font-size:4em;
 	}
 }
+.game-container{
+	margin-top: 3vh;
+	display: inline-flex;
+}
+#board {               
+   	display: grid;
+	justify-content: center;
+	margin-bottom: 10vh;
+	perspective: 1000px;
+}
+.ballroom{
+	grid-template-columns: repeat(4,auto);
+	margin-left: .4vh;
+}
+.farm{
+	grid-template-columns: repeat(4,auto);
+	margin-left: .4vh;
+}
 .memory-game{
 	display: grid;
 	grid-template-columns: repeat(4,auto);
 	grid-gap: auto;
 	margin: 5px;
 	justify-content: center;
-	perspective: 1000px;
 }
 .memory-card{
 	position: relative;
@@ -110,46 +160,90 @@ body{
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	color: #b68c04;
 	border-style: solid;
 	border-width: 3px;
 	border-color: #b68c04;
 	border-radius: 6px;
 	backface-visibility: hidden;
+}
+
+.back-face.ballroom{
+	color: #b68c04;
+	border-color: #b68c04;
 	background: #154b67; /* Old browsers */
 	background: -moz-linear-gradient(top, #154b67 0%, #28938b 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#154b67), color-stop(100%,#28938b)); /* Chrome,Safari4+ */
     background: -webkit-radial-gradient(circle, #28938b  0%,#154b67 100%); /* Chrome10+,Safari5.1+ */
     background: -o-linear-gradient(top, #154b67 0%,#28938b 100%); /* Opera 11.10+ */
     background: -ms-linear-gradient(top, #154b67 0%,#28938b 100%); /* IE10+ */
-    background: linear-gradient(top, #154b67 0%,#28938b 100%); /* W3C */
-	
+    background: linear-gradient(top, #154b67 0%,#28938b 100%); /* W3C */	
+}
+.back-face.farm{
+	color: #feda00;
+	border-color: white;
+	background: rgba(86,201,217,0.9);
+	transition: 0.15s padding ease-out;
+}
+.back-face.farm:hover {
+	padding: 15%;
 }
 .front-face{
 	transform: rotateY(180deg);
 }
+.front-face.farm{
+	border-color: white;
+}
+img.front-face.farm{
+	padding: 15% 20%;
+	background: rgba(174, 236, 250,0.9);
+}
 img.back-face{
 	padding: 20%;
 }
+.footer{
+	position:fixed;
+	left:0px;
+	bottom:0px;
+	height:18px;
+	width:100%;
+	padding:  0 0 1.3em 1em;
+	font-size: 1.1em;
+}
+a:link, a:visited {
+    color: #f7e519;
+	text-decoration: none;
+	font-size: .7em;
+}
 @media  (min-width: 768px) {
-	body {
-	background-image: url("img/1769.jpg");
+	.background.ballroom {
+	background-image: url("img/ballroom/1769.jpg");
+	}
+	.background.farm {
+	background-image: url("img/farm/526.jpg");
+	}
+	.game-container{
+	margin-top: 7vh;
+	margin-bottom: 5vh;
+	}
+	.game-info-container {
+	margin-left: 5vh;
+	width: 120px;
 	}
 	.game-info {
 	font-size: 1.3em;
+	padding: 2em;
 	}
-	.game-info-container {
-	margin-top: 3.3em;
-	margin-left: 1.5em;
-	width: 145px;
-	}
-	.memory-game {
+	#board{
 	display: grid;
-	grid-template-columns: repeat(8,auto);
-	grid-gap: auto;
-	margin: 50px;
 	justify-content: center;
-	perspective: 1000px;
+	}
+	#board.ballroom{
+	grid-template-columns: repeat(8,auto);
+	margin-left: 4vh;
+	}
+	#board.farm{
+	grid-template-columns: repeat(4,auto);
+	margin-left: 40vh;
 	}
 	.memory-card {
 	width: 125px;
